Your message for the new commit

--- a/.github/workflows/CI.YAML
+++ b/.github/workflows/CI.YAML
@@ -1,23 +1,31 @@
-name: RAG Pipeline CI
+# File: .github/workflows/ci.yml
 
-on: [push, pull_request]
+name: LLM-RAG CI Pipeline
+
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+    - name: 📥 Checkout code
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
+    - name: 🐍 Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest
+    - name: 📦 Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-      - name: Run tests
-        run: pytest tests/test_pipeline.py
+    - name: ✅ Run tests
+      run: |
+        pytest tests/
