--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
+        
     - name: ✅ Run tests
       run: |
-        pytest tests/
+        PYTHONPATH=. pytest tests/
+
