--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        
+
+    - name: 🧠 Build vector store
+      run: |
+        python Pipeline/embeddings_2/build_vector_store.py
+
     - name: ✅ Run tests
       run: |
         PYTHONPATH=. pytest tests/
