--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,65 +7,73 @@ on:
     branches: [main]
 
 jobs:
+
+  ### 🧪 TEST JOB ###
   test:
-    name: 🧪 Run Python Tests
+    name: Run Python Tests
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
 
-      - name: 🐍 Set up Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      - name: 📦 Install dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: 🧠 Build vector store
+      - name: Build vector store
         run: |
           PYTHONPATH=. python Pipeline/embeddings_2/build_vector_store.py
 
-      - name: ✅ Run tests
+      - name: Run tests
         run: |
           PYTHONPATH=. pytest tests/
 
+  ### 🐳 DOCKER JOB ###
   docker:
-    name: 🐳 Build & Push Docker Image
+    name: Build & Push Docker Image
     runs-on: ubuntu-latest
     needs: test
 
     steps:
       - uses: actions/checkout@v3
 
-      - name: 🐳 Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: 🔐 Login to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: 🧱 Build Docker Image
-        run: docker build -t llmrag-app .
+      - name: Build Docker Image
+        run: |
+          docker build -t llmrag-app .
 
-      - name: 📸 List Docker images
+      - name: List Docker images
         run: docker image ls
 
-      - name: 🚀 Tag Docker Image
+      - name: Debug tagging
+        run: echo ">> TAG: ${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest"
+
+      - name: Tag Docker Image
         run: |
           docker tag llmrag-app "${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest"
 
-      - name: 📤 Push Docker Image
+      - name: Push Docker Image
         run: |
           docker push "${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest"
 
-      - name: ✅ Run container with API keys
+      - name: Run container with API keys
         run: |
           docker run --rm \
-              -e GEMINI_API_KEY="${{ secrets.GEMINI_API_KEY }}" \
-              -e SERPER_API_KEY="${{ secrets.SERPER_API_KEY }}" \
-              -p 8000:8000 "${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest"
+            -e GEMINI_API_KEY="${{ secrets.GEMINI_API_KEY }}" \
+            -e SERPER_API_KEY="${{ secrets.SERPER_API_KEY }}" \
+            -p 8000:8000 \
+            "${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest"
