--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,65 +12,54 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: ⬇️ Checkout Code
+        uses: actions/checkout@v4
 
       - name: 🐍 Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      - name: 📦 Install dependencies
+      - name: 📦 Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: 🧠 Build vector store
+      - name: 🧠 Build Vector Store
         run: |
           PYTHONPATH=. python Pipeline/embeddings_2/build_vector_store.py
 
-      - name: ✅ Run tests
+      - name: ✅ Run Tests
         run: |
           PYTHONPATH=. pytest tests/
 
   docker:
-    name: 🐳 Build & Push Docker Image
-    runs-on: ubuntu-latest
+    name: Docker Build and Push
     needs: test
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: ⬇️ Checkout Code
+        uses: actions/checkout@v4
 
-      - name: 🐳 Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: 🔐 Login to Docker Hub
+      - name: 🔐 Docker Login
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: 🧱 Build Docker Image
-        run: docker build -t llmrag-app .
-
-      - name: 📸 List Docker images
-        run: docker image ls
-
-      - name: 🔍 Debug tag string
+      - name: 🐳 Build Docker Image
         run: |
-          echo "Docker image will be tagged as: ${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest"
-
-      - name: 🚀 Tag Docker Image
-        run: |
-          docker tag llmrag-app ${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest
+          docker build -t docker.io/${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest .
 
       - name: 📤 Push Docker Image
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest
+          docker push docker.io/${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest
 
-      - name: ✅ Run container with API keys
+      - name: ✅ Run Container with API Keys
         run: |
           docker run --rm \
             -e GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }} \
             -e SERPER_API_KEY=${{ secrets.SERPER_API_KEY }} \
             -p 8000:8000 \
-            ${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest
+            docker.io/${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest
