--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
-
 name: LLM-RAG CI Pipeline
 
 on:
@@ -8,7 +7,6 @@ on:
     branches: [main]
 
 jobs:
-  ### 🧪 TEST JOB ###
   test:
     name: 🧪 Run Python Tests
     runs-on: ubuntu-latest
@@ -35,10 +33,8 @@ jobs:
         run: |
           PYTHONPATH=. pytest tests/
 
-
-  ### 🐳 DOCKER JOB ###
   docker:
-    name: 🐳 Build & Push Docker Image
+    name: 🐳 Docker Build and Push
     needs: test
     runs-on: ubuntu-latest
 
@@ -52,17 +48,13 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: 🐳 Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: 🧱 Build Docker Image with Buildx
+      - name: 🐳 Build Docker Image
         run: |
-          docker buildx build --load \
-            -t docker.io/${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest .
 
       - name: 📤 Push Docker Image
         run: |
-          docker push docker.io/${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest
 
       - name: ✅ Run Container with API Keys
         run: |
@@ -70,4 +62,4 @@ jobs:
             -e GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }} \
             -e SERPER_API_KEY=${{ secrets.SERPER_API_KEY }} \
             -p 8000:8000 \
-            docker.io/${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest
+            ${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest
