--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
     branches: [main]
 
 jobs:
+  ### ✅ TEST JOB ###
   test:
     name: 🧪 Run Python Tests
     runs-on: ubuntu-latest
@@ -33,8 +34,9 @@ jobs:
         run: |
           PYTHONPATH=. pytest tests/
 
+  ### 🐳 DOCKER JOB ###
   docker:
-    name: 🐳 Docker Build and Push
+    name: 🐳 Docker Build & Push
     needs: test
     runs-on: ubuntu-latest
 
