--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: LLM-RAG CI Pipeline
+name: LLM‑RAG CI/CD Pipeline
 
 on:
   push:
@@ -7,14 +7,16 @@ on:
     branches: [main]
 
 jobs:
-  ### ✅ TEST JOB ###
+  # ----------------------------
+  # 🧪 TEST JOB
+  # ----------------------------
   test:
     name: 🧪 Run Python Tests
     runs-on: ubuntu-latest
 
     steps:
-      - name: ⬇️ Checkout Code
-        uses: actions/checkout@v4
+      - name: 📥 Checkout Code
+        uses: actions/checkout@v3
 
       - name: 🐍 Set up Python
         uses: actions/setup-python@v4
@@ -34,34 +36,44 @@ jobs:
         run: |
           PYTHONPATH=. pytest tests/
 
-  ### 🐳 DOCKER JOB ###
+  # ----------------------------
+  # 🐳 DOCKER JOB
+  # ----------------------------
   docker:
-    name: 🐳 Docker Build & Push
-    needs: test
+    name: 🐳 Build & Push Docker Image
     runs-on: ubuntu-latest
+    needs: test
 
     steps:
-      - name: ⬇️ Checkout Code
-        uses: actions/checkout@v4
+      - name: 📥 Checkout Code
+        uses: actions/checkout@v3
 
-      - name: 🔐 Docker Login
+      - name: 🔧 Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: 🔐 Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: 🐳 Build Docker Image
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest .
+        run: docker build -t llmrag-app .
 
-      - name: 📤 Push Docker Image
-        run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest
+      - name: 📸 Show Built Images
+        run: docker image ls llmrag-app
 
-      - name: ✅ Run Container with API Keys
+      - name: 🚀 Tag for Docker Hub
+        run: |
+          docker tag llmrag-app "${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest"
+
+      - name: 📤 Push to Docker Hub
+        run: |
+          docker push "${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest"
+
+      - name: ✅ Smoke Test Container
         run: |
           docker run --rm \
-            -e GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }} \
-            -e SERPER_API_KEY=${{ secrets.SERPER_API_KEY }} \
-            -p 8000:8000 \
-            ${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest
+            -e GEMINI_API_KEY="${{ secrets.GEMINI_API_KEY }}" \
+            -e SERPER_API_KEY="${{ secrets.SERPER_API_KEY }}" \
+            -p 8000:8000 "${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest"
