--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: LLM‑RAG CI/CD Pipeline
+name: LLM‑RAG CI Pipeline
 
 on:
   push:
@@ -7,16 +7,12 @@ on:
     branches: [main]
 
 jobs:
-  # ----------------------------
-  # 🧪 TEST JOB
-  # ----------------------------
   test:
     name: 🧪 Run Python Tests
     runs-on: ubuntu-latest
-
     steps:
-      - name: 📥 Checkout Code
-        uses: actions/checkout@v3
+      - name: ⬇️ Checkout Code
+        uses: actions/checkout@v4
 
       - name: 🐍 Set up Python
         uses: actions/setup-python@v4
@@ -36,44 +32,34 @@ jobs:
         run: |
           PYTHONPATH=. pytest tests/
 
-  # ----------------------------
-  # 🐳 DOCKER JOB
-  # ----------------------------
   docker:
     name: 🐳 Build & Push Docker Image
-    runs-on: ubuntu-latest
     needs: test
-
+    runs-on: ubuntu-latest
     steps:
-      - name: 📥 Checkout Code
-        uses: actions/checkout@v3
+      - name: ⬇️ Checkout Code
+        uses: actions/checkout@v4
 
-      - name: 🔧 Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: 🔐 Log in to Docker Hub
+      - name: 🔐 Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: 🐳 Build Docker Image
-        run: docker build -t llmrag-app .
-
-      - name: 📸 Show Built Images
-        run: docker image ls llmrag-app
-
-      - name: 🚀 Tag for Docker Hub
         run: |
-          docker tag llmrag-app "${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest"
+          docker build -t msumanth06/llmrag-app:latest .
 
-      - name: 📤 Push to Docker Hub
+      - name: 📤 Push Docker Image
         run: |
-          docker push "${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest"
+          docker push msumanth06/llmrag-app:latest
 
-      - name: ✅ Smoke Test Container
+      - name: ✅ Smoke‑test Container
         run: |
           docker run --rm \
             -e GEMINI_API_KEY="${{ secrets.GEMINI_API_KEY }}" \
             -e SERPER_API_KEY="${{ secrets.SERPER_API_KEY }}" \
-            -p 8000:8000 "${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest"
+            -p 8000:8000 \
+            msumanth06/llmrag-app:latest \
+            sh -c "sleep 5 && curl -f http://localhost:8000/docs"
+
