--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: LLM‑RAG CI Pipeline
+name: LLM-RAG CI Pipeline
 
 on:
   push:
@@ -40,7 +40,7 @@ jobs:
       - name: ⬇️ Checkout Code
         uses: actions/checkout@v4
 
-      - name: 🔐 Login to Docker Hub
+      - name: 🔐 Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -48,18 +48,38 @@ jobs:
 
       - name: 🐳 Build Docker Image
         run: |
-          docker build -t msumanth06/llmrag-app:latest .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest .
 
       - name: 📤 Push Docker Image
         run: |
-          docker push msumanth06/llmrag-app:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest
 
-      - name: ✅ Smoke‑test Container
+      - name: ✅ Smoke Test Container
         run: |
-          docker run --rm \
+          # start container in background
+          docker run -d --name llmrag-test \
             -e GEMINI_API_KEY="${{ secrets.GEMINI_API_KEY }}" \
             -e SERPER_API_KEY="${{ secrets.SERPER_API_KEY }}" \
             -p 8000:8000 \
-            msumanth06/llmrag-app:latest \
-            sh -c "sleep 5 && curl -f http://localhost:8000/docs"
+            ${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest
 
+          # wait for app to respond
+          for i in {1..15}; do
+            status=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8000/docs || echo "000")
+            if [ "$status" = "200" ]; then
+              echo "✅ App is responding with 200 OK"
+              break
+            fi
+            echo "Waiting for app to start ($i)..."
+            sleep 2
+          done
+
+          if [ "$status" != "200" ]; then
+            echo "❌ App did not start within timeout (HTTP $status)"
+            docker logs llmrag-test
+            exit 1
+          fi
+
+          # cleanup
+          docker stop llmrag-test
+          docker rm llmrag-test
