--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: LLM-RAG CI Pipeline
+name: LLM‑RAG CI Pipeline
 
 on:
   push:
@@ -11,25 +11,15 @@ jobs:
     name: 🧪 Run Python Tests
     runs-on: ubuntu-latest
     steps:
-      - name: ⬇️ Checkout Code
-        uses: actions/checkout@v4
-
-      - name: 🐍 Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: 📦 Install Dependencies
-        run: |
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v4
+        with: python-version: '3.10'
+      - run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: 🧠 Build Vector Store
-        run: |
+      - run: |
           PYTHONPATH=. python Pipeline/embeddings_2/build_vector_store.py
-
-      - name: ✅ Run Tests
-        run: |
+      - run: |
           PYTHONPATH=. pytest tests/
 
   docker:
@@ -37,49 +27,18 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     steps:
-      - name: ⬇️ Checkout Code
-        uses: actions/checkout@v4
-
-      - name: 🔐 Log in to Docker Hub
-        uses: docker/login-action@v3
+      - uses: actions/checkout@v4
+      - uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: 🐳 Build Docker Image
+      - run: docker build -t msumanth06/llmrag-app:latest .
+      - run: docker push msumanth06/llmrag-app:latest
+      - name: ✅ Smoke‑test API
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest .
-
-      - name: 📤 Push Docker Image
-        run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest
-
-      - name: ✅ Smoke Test Container
-        run: |
-          # start container in background
-          docker run -d --name llmrag-test \
+          docker run --rm \
             -e GEMINI_API_KEY="${{ secrets.GEMINI_API_KEY }}" \
             -e SERPER_API_KEY="${{ secrets.SERPER_API_KEY }}" \
             -p 8000:8000 \
-            ${{ secrets.DOCKER_USERNAME }}/llmrag-app:latest
-
-          # wait for app to respond
-          for i in {1..15}; do
-            status=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8000/docs || echo "000")
-            if [ "$status" = "200" ]; then
-              echo "✅ App is responding with 200 OK"
-              break
-            fi
-            echo "Waiting for app to start ($i)..."
-            sleep 2
-          done
-
-          if [ "$status" != "200" ]; then
-            echo "❌ App did not start within timeout (HTTP $status)"
-            docker logs llmrag-test
-            exit 1
-          fi
-
-          # cleanup
-          docker stop llmrag-test
-          docker rm llmrag-test
+            msumanth06/llmrag-app:latest \
+            sh -c "sleep 5 && curl -f http://localhost:8000/docs"
