--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,13 +12,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v4
-        with: python-version: '3.10'
+        with:
+          python-version: '3.10'
+
       - run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
       - run: |
           PYTHONPATH=. python Pipeline/embeddings_2/build_vector_store.py
+
       - run: |
           PYTHONPATH=. pytest tests/
 
@@ -28,12 +33,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
       - run: docker build -t msumanth06/llmrag-app:latest .
+
       - run: docker push msumanth06/llmrag-app:latest
+
       - name: ✅ Smoke‑test API
         run: |
           docker run --rm \
