--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,11 +51,14 @@ jobs:
             -p 8000:8000 \
             msumanth06/llmrag-app:latest \
             sh -c '
+              uvicorn Pipeline.api_6.main:app --host 0.0.0.0 --port 8000 &
+
               for i in {1..10}; do
                 echo "🔄 Checking if FastAPI is up (attempt $i)..."
                 curl -f http://localhost:8000/docs && exit 0
                 sleep 3
               done
+
               echo "❌ FastAPI did not start in time"
               exit 1
             '
